<resources>
    <string name="app_name">Parkme</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    //Strings for menu
    <string name="nav_map_text">Carte des places</string>
    <string name="nav_reservations_text">Place rerservé</string>
    <string name="nav_payment_text">Moyen de paiement</string>
    <string name="nav_settings_text">Réglage</string>
    <string name="nav_profil_text">Mon profil</string>
    <string name="nav_propose_text">Proposer une place</string>
    <string name="nav_logout_text">Se déconnecter</string>


    <string name="accessToken">pk.eyJ1IjoibHVjaWFubzkzIiwiYSI6ImNpcGJxMnVoaTAwMjJ1OGtzbTUxZzBjNjQifQ.eMOR9lz-_f6HTZj4KrAJCw</string>
    <string name="title_activity_reservations">ReservationsActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
